# DocEater

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_add_document_images_table.py
docs/: RFD-000-implementation-plan.md  RFD-002-testing-infrastructure.md  RFD-003-DOCLING_INTEGRATION.md  RFD-004-IMAGE_STORAGE.md  RFD-INDEX.md  mvp-plan.md
src/doceater/: __init__.py  cli.py  config.py  database.py  docling_wrapper.py  image_storage.py  models.py  processor.py  watcher.py
tests/: conftest.py  test_config.py  test_database.py  test_image_storage.py  test_models.py  test_processor.py  test_utils.py
